--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,34 @@
 body{
-    background-color: #222;
+    background:radial-gradient(circle at left top, #7c797a,#222 70%);
+    color: #fff;
+    height: 100vh;
 }
+
+.root{
+    height: 100vh;
+}
+/* barra nav */
+
+.nav-bar{
+    background-color: #570148;
+    display: block;
+}
+/* fin barra nav */
+
+/* tarjetas */
+
+.container{
+    display: flex;
+    flex-wrap: wrap;    
+    justify-content: space-evenly;
+    width: 100%;
+}
+
+article{
+    border: solid 1px #fff;
+    width: 500px;
+    padding: 10px;
+    margin: 10px;
+}
+
+/* fin tarejas */
