--- a/frontend/src/App.module.css
+++ b/frontend/src/App.module.css
@@ -40,7 +40,7 @@ body{
 /* fin imagen */
 
 /* texto */
-.container-text{
+.container_text{
     width: 100%;
     height: 40%;
     padding: 10px;
@@ -74,14 +74,14 @@ body{
 }
 
 /* botones */
-.container-button{
+.container_button{
     display: flex;
     width: 100%;
     height: 14%;
     justify-content: space-evenly;
 }
 
-.container-button button{
+.container_button button{
     width: 80px;
     height: 40px;
     border-radius: 6px;
