--- a/frontend/src/App.module.css
+++ b/frontend/src/App.module.css
@@ -15,6 +15,31 @@ body{
 .root{
     height: 100%;
 }
+
+
+
+/* boton agregar */
+.btn_add{
+    width: 50px; 
+    height: 50px;
+    background-color: #fff;
+    border: none;
+    border-radius: 50%; 
+    font-size: 24px;
+    cursor: pointer;
+    box-shadow: 0px 2px 4px rgba(0,0,0,2);
+    transition:  0.3s linear;
+    outline: none;
+}
+
+.btn_add:hover {
+    background-color: #2acf40;
+    box-shadow: 0 0 5px #2acf40, 0 0 15px #2acf40, 0 0 20px #2acf40,0 0 30px #2acf40, 0 0 50px #2acf40;
+    border: none;
+}
+
+/* boton fin agregar */
+
 /* tarjetas */
 
 .container{
